--- a/code/src/main/resources/application.properties
+++ b/code/src/main/resources/application.properties
@@ -2,7 +2,7 @@ app.version=v1
 app.backend=https://httpbin.org/status/200
 %dev.app.backend=https://httpbin.org/delay/1
 
-app.message=Hello, World
+app.message=Hello, World Chatchai
 app.errorCodeNotLive=504
 app.errorCodeNotReady=503
 app.showResponse=false
